Working Calculator app

--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Calculator</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <script src='main.js' defer></script>
 </head>
+
 <body>
     <h1>Only Cool People Use This Calculator</h1>
-    <div class = 'calculator'>
-        <div class = 'row'></div>
-        <div class = 'row'></div>
-        <div class = 'row'></div>
-        <div class = 'row'></div>
-        <div class = 'row'></div>
+    <div class='calculator'>
+        <div class='row-display'>
+            <div class ='input'></div>
+            <div class ='results'></div>
+        </div>
+        <div class='row'>
+            <button id='7'><span>7</span></button>
+            <button id='8'><span>8</span></button>
+            <button id='9'><span>9</span></button>
+            <button id='*'><span>X</span></button>
+        </div>
+        <div class='row'>
+            <button id='4'><span>4</span></button>
+            <button id='5'><span>5</span></button>
+            <button id='6'><span>6</span></button>
+            <button id='-'><span>-</span></button>
+        </div>
+        <div class='row'>
+            <button id='1'><span>1</span></button>
+            <button id='2'><span>2</span></button>
+            <button id='3'><span>3</span></button>
+            <button id='+'><span>+</span></button>
+        </div>
+        <div class='row'>
+            <button id='CE'><span>CE</span></button>
+            <button id='0'><span>0</span></button>
+            <button id='.'><span>.</span></button>
+            <button id='/'><span>/</span></button>
+            <button id='='><span>=</span></button>
+        </div>
     </div>
-    
+
 </body>
+
 </html>
